@@ -56,6 +56,8 @@
 #include <ags/X/machine/ags_ladspa_bridge.h>
 #include <ags/X/machine/ags_dssi_bridge.h>
 #include <ags/X/machine/ags_lv2_bridge.h>
+#include <ags/X/machine/ags_live_dssi_bridge.h>
+#include <ags/X/machine/ags_live_lv2_bridge.h>
 
 #include <stdlib.h>
 #include <unistd.h>
@@ -877,6 +879,181 @@ ags_menu_bar_add_lv2_bridge_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar)
 
   /* */
   gtk_widget_show_all(GTK_WIDGET(lv2_bridge));
+}
+
+void
+ags_menu_bar_add_live_dssi_bridge_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar)
+{
+  AgsWindow *window;
+  AgsLiveDssiBridge *live_dssi_bridge;
+
+  AgsAddAudio *add_audio;
+
+  AgsMutexManager *mutex_manager;
+  AgsThread *main_loop;
+  AgsTaskThread *task_thread;
+
+  AgsApplicationContext *application_context;
+
+  gchar *filename, *effect;
+  
+  pthread_mutex_t *application_mutex;
+
+  filename = g_object_get_data((GObject *) menu_item,
+			       AGS_MENU_ITEM_FILENAME_KEY);
+  effect = g_object_get_data((GObject *) menu_item,
+			     AGS_MENU_ITEM_EFFECT_KEY);
+  
+  window = (AgsWindow *) gtk_widget_get_ancestor((GtkWidget *) menu_bar, AGS_TYPE_WINDOW);
+  application_context = (AgsApplicationContext *) window->application_context;
+
+  live_dssi_bridge = ags_live_dssi_bridge_new(G_OBJECT(window->soundcard),
+					      filename,
+					      effect);
+  
+  mutex_manager = ags_mutex_manager_get_instance();
+  application_mutex = ags_mutex_manager_get_application_mutex(mutex_manager);
+  
+  /* get audio loop */
+  pthread_mutex_lock(application_mutex);
+
+  main_loop = (AgsThread *) application_context->main_loop;
+  
+  pthread_mutex_unlock(application_mutex);
+
+  /* get task thread */
+  task_thread = (AgsTaskThread *) ags_thread_find_type(main_loop,
+						       AGS_TYPE_TASK_THREAD);
+  
+  add_audio = ags_add_audio_new(window->soundcard,
+				AGS_MACHINE(live_dssi_bridge)->audio);
+  ags_task_thread_append_task(task_thread,
+			      AGS_TASK(add_audio));
+
+  gtk_box_pack_start((GtkBox *) window->machines,
+		     GTK_WIDGET(live_dssi_bridge),
+		     FALSE, FALSE, 0);
+  
+  /* */
+  live_dssi_bridge->machine.audio->audio_channels = 2;
+
+  /*  */
+  ags_audio_set_pads(live_dssi_bridge->machine.audio, AGS_TYPE_INPUT, 128);
+  ags_audio_set_pads(live_dssi_bridge->machine.audio, AGS_TYPE_OUTPUT, 1);
+
+  /* connect everything */
+  ags_connectable_connect(AGS_CONNECTABLE(live_dssi_bridge));
+
+  /*  */
+  ags_live_dssi_bridge_load(live_dssi_bridge);
+
+  /* */
+  gtk_widget_show_all(GTK_WIDGET(live_dssi_bridge));
+}
+
+void
+ags_menu_bar_add_live_lv2_bridge_callback(GtkWidget *menu_item, AgsMenuBar *menu_bar)
+{
+  AgsWindow *window;
+  AgsLiveLv2Bridge *live_lv2_bridge;
+
+  AgsAddAudio *add_audio;
+
+  AgsMutexManager *mutex_manager;
+  AgsThread *main_loop;
+  AgsTaskThread *task_thread;
+
+  AgsApplicationContext *application_context;
+
+  AgsLv2Plugin *lv2_plugin;
+
+  gchar *filename, *effect;
+  
+  pthread_mutex_t *application_mutex;
+    
+  filename = g_object_get_data((GObject *) menu_item,
+			       AGS_MENU_ITEM_FILENAME_KEY);
+  effect = g_object_get_data((GObject *) menu_item,
+			     AGS_MENU_ITEM_EFFECT_KEY);
+  
+  window = (AgsWindow *) gtk_widget_get_ancestor((GtkWidget *) menu_bar, AGS_TYPE_WINDOW);
+  application_context = (AgsApplicationContext *) window->application_context;
+
+  live_lv2_bridge = ags_live_lv2_bridge_new(G_OBJECT(window->soundcard),
+					    filename,
+					    effect);
+    
+  mutex_manager = ags_mutex_manager_get_instance();
+  application_mutex = ags_mutex_manager_get_application_mutex(mutex_manager);
+  
+  lv2_plugin = ags_lv2_manager_find_lv2_plugin(ags_lv2_manager_get_instance(),
+					       filename, effect);
+  
+  if(lv2_plugin != NULL &&
+     (AGS_LV2_PLUGIN_IS_SYNTHESIZER & (lv2_plugin->flags)) != 0){
+    AGS_MACHINE(live_lv2_bridge)->audio->flags |= (AGS_AUDIO_OUTPUT_HAS_RECYCLING |
+						   AGS_AUDIO_INPUT_HAS_RECYCLING |
+						   AGS_AUDIO_SYNC |
+						   AGS_AUDIO_ASYNC |
+						   AGS_AUDIO_HAS_NOTATION | 
+						   AGS_AUDIO_NOTATION_DEFAULT |
+						   AGS_AUDIO_REVERSE_MAPPING);
+    g_object_set(AGS_MACHINE(live_lv2_bridge)->audio,
+		 "audio-start-mapping\0", 0,
+		 "audio-end-mapping\0", 128,
+		 "midi-start-mapping\0", 0,
+		 "midi-end-mapping\0", 128,
+		 NULL);
+    
+    AGS_MACHINE(live_lv2_bridge)->flags |= (AGS_MACHINE_IS_SYNTHESIZER |
+					    AGS_MACHINE_REVERSE_NOTATION);
+
+    ags_machine_popup_add_connection_options((AgsMachine *) live_lv2_bridge,
+					     (AGS_MACHINE_POPUP_MIDI_DIALOG));
+  }
+  
+  /* get audio loop */
+  pthread_mutex_lock(application_mutex);
+
+  main_loop = (AgsThread *) application_context->main_loop;
+
+  pthread_mutex_unlock(application_mutex);
+
+  /* get task thread */
+  task_thread = (AgsTaskThread *) ags_thread_find_type(main_loop,
+						       AGS_TYPE_TASK_THREAD);
+  
+  add_audio = ags_add_audio_new(window->soundcard,
+				AGS_MACHINE(live_lv2_bridge)->audio);
+  ags_task_thread_append_task(task_thread,
+			      AGS_TASK(add_audio));
+
+  gtk_box_pack_start((GtkBox *) window->machines,
+		     GTK_WIDGET(live_lv2_bridge),
+		     FALSE, FALSE, 0);
+  
+  /*  */
+  live_lv2_bridge->machine.audio->audio_channels = 2;
+
+  /*  */
+  if(lv2_plugin != NULL){
+    if((AGS_LV2_PLUGIN_IS_SYNTHESIZER & (lv2_plugin->flags)) == 0){
+      ags_audio_set_pads(live_lv2_bridge->machine.audio, AGS_TYPE_INPUT, 1);
+    }else{
+      ags_audio_set_pads(live_lv2_bridge->machine.audio, AGS_TYPE_INPUT, 128);
+    }
+  }
+  
+  ags_audio_set_pads(live_lv2_bridge->machine.audio, AGS_TYPE_OUTPUT, 1);
+
+  /* connect everything */
+  ags_connectable_connect(AGS_CONNECTABLE(live_lv2_bridge));
+
+  /*  */
+  ags_live_lv2_bridge_load(live_lv2_bridge);
+
+  /* */
+  gtk_widget_show_all(GTK_WIDGET(live_lv2_bridge));
 }
 
 void
