@@ -1,3 +1,9 @@
+ags (0.7.134)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented ags-play-dssi and ags-play-lv2 recall
+	* implemented AgsLiveDssiBridge and AgsLiveLv2Bridge
+
 ags (0.7.133)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
